updating sharepoint.js

--- a/tools/sidekick/foo.html
+++ b/tools/sidekick/foo.html
@@ -1,3 +1,8 @@
 <html>
+<head>
+    <script type="text/javascript">
+        console.log("I am here");
+    </script>
+</head>
 hello world
 </html>
